deploy/main/default/objects/TriggerOLD__c/TriggerOLD__c.object-meta.xml
<CustomObject>
    <label>Trigger.OLD</label>
    <nameField>
        <displayFormat>TOLD-{0000}</displayFormat>
        <label>Trigger.OLD Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trigger.OLDs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>