deploy/main/default/objects/TriggerOLD__c/fields/Dummy__c.field-meta.xml
<CustomField>
    <fullName>Dummy__c</fullName>
    <defaultValue>'X'</defaultValue>
    <label>Dummy</label>
    <length>20</length>
    <type>Text</type>
</CustomField>