deploy/main/default/objects/TriggerOLD__c/fields/Who__c.field-meta.xml
<CustomField>
    <fullName>Who__c</fullName>
    <defaultValue>&apos;New Record&apos;</defaultValue>
    <label>Who</label>
    <length>50</length>
    <type>Text</type>
</CustomField>